@@ -30,6 +30,8 @@ Bugs fixed
   Hirai.
 * #1871: Fix for LaTeX output of tables with one column and multirows.
 * Work around the lack of the HTMLParserError exception in Python 3.5.
+* #1949: Use ``safe_getattr`` in the coverage builder to avoid aborting with
+  descriptors that have custom behavior.
 
 
 Release 1.3.1 (released Mar 17, 2015)
